--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                    <a href="menu_sandwich.html"><img src="image/Sandwich-kebab-1024x852.jpg" alt="ppj"></a><figure><figcaption> Nos Sandwich</figcaption></figure></td></tr>
             <tr><td><a href="menu_burger.html"><img src="image/burger.jpg" alt="ppj"></a><figure><figcaption> Nos Burger</figcaption></figure></td></tr>
             <tr><td><a href="menu_pizza.html"><img src="image/pizza.jpg" alt="ppj"></a><figure><figcaption> Nos Pizza</figcaption></figure></td></tr>
-            <tr><td><a href="menu.boisson.html"><img src="image/boisson.jpg" alt="ppj"></a><figure><figcaption> Nos Boisson</figcaption></figure></td></tr>
+            <tr><td><a href="menu_boisson.html"><img src="image/boisson.jpg" alt="ppj"></a><figure><figcaption> Nos Boisson</figcaption></figure></td></tr>
            
         </tbody>
        
